Use CMakeDeps Conan generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(ohNet LANGUAGES CXX C)
 
 set(platform Posix)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}")
+find_package(libb64 CONFIG REQUIRED)
 
 if(WIN32)
     set(platform Windows)
@@ -247,6 +247,10 @@ header_copy(header31 IncludeBase IncludeCopy ${CMAKE_SOURCE_DIR}/${mDNSdir}/mDNS
 
 message("Creating files in " ${CMAKE_CURRENT_BINARY_DIR}/Temp/OpenHome)
 target_include_directories(ohNet SYSTEM PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/Temp)
+
+target_include_directories(
+    ohNet PUBLIC $<INSTALL_INTERFACE:include>
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
 set(GENERATED_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/Temp PARENT_SCOPE)
 
 set(ENDIANNESS DEFINE_LITTLE_ENDIAN)
@@ -257,7 +261,7 @@ endif(DEBUG_LOG)
 
 target_compile_definitions(ohNet PUBLIC ${ENDIANNESS})
 add_dependencies(ohNet IncludeCopy)
-target_link_libraries(ohNet ${CONAN_LIBS})
+target_link_libraries(ohNet PUBLIC libb64::libb64)
 
 # tests
 
@@ -302,4 +306,3 @@ if(${COMPILE_FOR_RPI})
     find_package(Threads REQUIRED)
     target_link_libraries(finder PRIVATE Threads::Threads)
 endif()
-
